[tool.poetry]
name = "qa-guru-pythin-3-17-hm-2"
version = "0.1.0"
description = "First project with poetry"
authors = ["Vladislav <djefry.kamen@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_pythin_3_17_hm_2"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
selene = "2.0.0b14"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
